--- a/src/Frontend/NewsFeed.form
+++ b/src/Frontend/NewsFeed.form
@@ -52,22 +52,17 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="addpost" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="addstory" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="friendrequests" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="addpost" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="addstory" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="friendrequests" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="GoToProfile" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="MyFriends" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="Suggestions" alignment="3" min="-2" max="-2" attributes="0"/>
-                      </Group>
+                  <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                      <Component id="GoToProfile" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="MyFriends" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="Suggestions" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="117" max="-2" attributes="0"/>
